# rust_server

./: .gitignore  Cargo.toml  README.md
migrations/2025-06-05-101546_create_users/: down.sql  up.sql
src/: config.rs  db.rs  errors.rs  main.rs
src/handlers/: user_handler.rs
src/middleware/: auth.rs
src/models/: user.rs
src/repositories/: mod.rs  user_repository.rs
src/routes/: mod.rs  user_routes.rs
src/services/: user_service.rs
