[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
r2d2   = "0.8"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }

diesel = { version = "2.0.4", features = ["postgres", "r2d2", "chrono"] }

serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

validator = { version = "0.16", features = ["derive"] }

thiserror = "1.0"

chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1.2", features = ["serde", "v4"] }

futures = "0.3"

utoipa = { version = "4.2", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = "4.2"